--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,25 +13,33 @@
                     <% }) %>    
                 <% } %>
                 <form action="/signup" method="POST">
-                    <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName">
-                      </div>
-                    <div class="mb-3">
+                  <div class="mb-3">
+                      <label for="userName" class="form-label">Name (First & Last)</label>
+                      <input type="text" class="form-control" id="userName" name="userName" placeholder="e.g. John Smith">
+                  </div>
+                  <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="e.g. johnsmith11@gmail.com">
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
+                  </div>
+                  <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
                       <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
-                      </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
+                  </div>
+                  <div class="mb-3">
+                      <label for="confirmPassword" class="form-label">Confirm Password</label>
+                      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+                  </div>
+                  <div class="mb-3">
+                      <label for="userType">Select your role:</label>
+                      <select id="userType" name="userType">
+                          <option value="contractor">Contractor</option>
+                          <option value="laborer">Laborer</option>
+                      </select>
+                  </div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+
+              </form>
             </section>
         </div>
     </main>
