--- a/views/laborer-feed.ejs
+++ b/views/laborer-feed.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') -%>
   <div class="container">
+    <h1>This is the feed for laborers</h1>
     <div class="row justify-content-center mt-5">
       <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
