--- a/views/laborer-profile.ejs
+++ b/views/laborer-profile.ejs
@@ -24,8 +24,8 @@
             <h1>This is the laborer profile</h1>
           </div>
           <div class="mt-5">
-            <h2>Add a post</h2>
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+            <h2>Let employees know you are ready to work!</h2>
+            <form action="/post/createLaborerPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
                   <label for="title" class="form-label">Title</label>
                   <input type="text" class="form-control" id="title" name="title">
@@ -38,6 +38,8 @@
                 <label for="imgUpload" class="form-label">Image</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
+              <!-- Hidden field for userType -->
+              <input type="hidden" name="postType" value="laborer">
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
             </form>
           </div>
