--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Day Labor Link</a></h1>
+        <h1 class=""><a href="/login">Day Labor Link</a></h1>
         <span>Welcome to DayLaborLink, your go-to platform for streamlined and efficient labor sourcing in the construction industry. We understand the challenges of finding reliable workers for short-term projects, and that's why we've created a seamless solution. Contractors can easily post job opportunities, whether it's for a day or a week, and connect with skilled laborers in their area. Workers, on the other hand, receive instant notifications about relevant job postings, enabling them to secure opportunities quickly. With our user-friendly interface and real-time communication features, DayLaborLink simplifies the hiring process, reduces downtime, and ensures that projects get the skilled hands they need. Join us in revolutionizing the way construction labor connects – where every day counts and every link matters. DayLaborLink: Building Tomorrow, Today.</span>
       </div>
     </header>
