--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header class="bg-white">
+    <header class="header-container">
       <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1">
           <a href="/login" class="-m-1.5 p-1.5">
@@ -44,7 +44,7 @@
             </svg>
           </button>
         </div>
-        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+        <div class="lg:flex lg:flex-1 lg:justify-end">
           <a href="/login" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" style="margin-right: 5%;">Log In</a>
           <a href="/signup" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign-Up</a>
         </div>
