--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/index-header') -%>
 
 <main class="container">
     <div class="relative isolate px-6 lg:px-8">
