--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/index-header') -%>
     <main class="container">
         <div class="row justify-content-center">
             <section class="col-6 mt-5">
