--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,36 +12,61 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/signup" method="POST">
-                  <div class="mb-3">
-                      <label for="userName" class="form-label">Name (First & Last)</label>
-                      <input type="text" class="form-control" id="userName" name="userName" placeholder="e.g. John Smith">
-                  </div>
-                  <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="e.g. johnsmith11@gmail.com">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                  </div>
-                  <div class="mb-3">
-                      <label for="password" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="password" name="password">
-                  </div>
-                  <div class="mb-3">
-                      <label for="confirmPassword" class="form-label">Confirm Password</label>
-                      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
-                  </div>
-                  <div class="mb-3">
-                      <label for="userType">Select your role:</label>
-                      <select id="userType" name="userType">
-                          <option value="contractor">Contractor</option>
-                          <option value="laborer">Laborer</option>
-                      </select>
-                  </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-
-              </form>
-            </section>
+<form action="/signup" method="POST">
+    <div class="space-y-12">
+      <div class="border-gray-900/10 pb-12">
+        <h2 class="text-base font-semibold leading-7 text-gray-900">Profile</h2>
+        <p class="mt-1 text-sm leading-6 text-gray-600">This information will be displayed publicly so be careful what you share.</p>
+  
+        <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+          <div class="sm:col-span-4">
+            <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Name (First & Last)</label>
+            <div class="mt-2">
+              <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                <input type="text" name="username" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="e.g. John Smith">
+              </div>
+            </div>
+          </div>
+          <div class="sm:col-span-4">
+            <label for="exampleInputEmail1" class="block text-sm font-medium leading-6 text-gray-900">Email Address</label>
+            <div class="mt-2">
+              <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                <input type="email" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="e.g. johnsmith11@gmail.com">
+              </div>
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+          </div>
+          <div class="sm:col-span-4">
+            <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+            <div class="mt-2">
+              <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                <input type="password" name="password" id="password" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6">
+              </div>
+            </div>
+          </div>
+          <div class="sm:col-span-4">
+            <label for="confirmPassword" class="block text-sm font-medium leading-6 text-gray-900">Confirm Password</label>
+            <div class="mt-2">
+              <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                <input type="password" name="confirmPassword" id="confirmPassword" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6">
+              </div>
+            </div>
+          </div>
+          <div class="sm:col-span-3">
+            <label for="userType" class="block text-sm font-medium leading-6 text-gray-900">Role</label>
+            <div class="mt-2">
+              <select id="userType" name="userType" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                <option value="contractor">Contractor</option>
+                <option valur="laborer">Laborer</option>
+              </select>
+            </div>
+          </div>
         </div>
+        <button type="submit" class="signup-button rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+      </div>
+    </div>
+  </form>
+  
     </main>
 
 <%- include('partials/footer') -%>
