--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,9 +45,9 @@
           </button>
         </div>
         <div class="lg:flex lg:flex-1 lg:justify-end">
-          <p class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Welcome <%= user.userName %></p>
-          <a href="/login" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Your Posts</a>
-          <a href="/login" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Profile</a>
+          <p class="block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50 header-button">Welcome <%= user.userName %></p>
+          <a href="/login" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 header-button">Favorited Posts</a>
+          <a href="/login" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 header-button">Profile</a>
           <a href="/logout" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Logout</a>
         </div>
       </nav>
