--- a/views/contractor-profile.ejs
+++ b/views/contractor-profile.ejs
@@ -6,8 +6,8 @@
               <p class="text-2xl font-bold"><strong>User Name</strong>: <%= user.userName %></p>
               <p class="text-gray-500"><strong>Email</strong>: <%= user.email %></p>
           </div>
-          <div class="mt-4">
-            <p class="text-gray-700"><span class="font-bold">Total Jobs:</span> 500</p>
+          <div class="marg-bot-5">
+            <p class="text-gray-700"><span class="font-bold">Total Jobs:</span> <%= posts.length %></p>
           </div> 
       <form action="/post/createContractorPost" enctype="multipart/form-data" method="POST">
         <div class="space-y-12">
