Late night session updating everything

--- a/views/laborer-feed.ejs
+++ b/views/laborer-feed.ejs
@@ -1,16 +1,31 @@
 <%- include('partials/header') -%>
-  <div class="container">
-    <h1>This is the feed for laborers</h1>
-    <div class="row justify-content-center mt-5">
-      <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
+
+<div class="bg-white">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+    <h2 class="text-2xl font-bold tracking-tight text-gray-900">Laborer Feed</h2>
+
+    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+      <% for(var i=0; i<posts.length; i++) { %>
+        <div class="group relative">
+          <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
             <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
+              <img src="<%= posts[i].image%>" alt="Post Image" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
             </a>
-          </li>
-        <% } %>
-        </ul>
+          </div>
+          <div class="mt-4 flex justify-between">
+            <div>
+              <h3 class="text-sm text-gray-700">
+                <a href="/post/<%= posts[i]._id%>">
+                  <span aria-hidden="true" class="absolute inset-0"></span>
+                  Click the image to learn more
+                </a>
+              </h3>
+            </div>
+          </div>
+        </div>
+      <% } %>
     </div>
-  </div>  
+  </div>
+</div>
+
 <%- include('partials/footer') -%>
