--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,37 +1,41 @@
 <%- include('partials/header') -%>
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <h2><%= post.title %></h2>
-      <img class="img-fluid" src="<%= post.image%>" />
-      <div class="row justify-content-between">
+<div class="bg-white">
+  <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8">
+    <div>
+      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"><%= post.title %></h2>
+      <p class="mt-4 text-gray-500"><%= post.caption %></p>
+      
+      <div class="row justify-content-between mt-5">
         <form
           class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
+          action="/post/favoritePost/<%= post.id %>?_method=PUT"
           method="POST"
         >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
+          <button class="bg-blue-500 text-white px-4 py-2 rounded-full focus:outline-none hover:bg-blue-600" type="submit">
+            <i class="fas fa-heart"></i>
+          </button>
         </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
-        <%if(post.user == user.id){ %>
-        <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
-          method="POST"
-          class="col-3"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
-        </form>
-        <%}%>
+        <h3 class="col-3">Favorites: <%= post.favorites %></h3>
+        <% if(post.user == user.id){ %>
+          <form
+            action="/post/deletePost/<%= post.id %>?_method=DELETE"
+            method="POST"
+            class="col-3"
+          >
+            <button class="bg-red-500 text-white px-4 py-2 rounded-full focus:outline-none hover:bg-red-600" type="submit">
+              <i class="fas fa-trash"></i>
+            </button>
+          </form>
+        <% } %>
       </div>
+      
     </div>
-    <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
-    </div>
-    <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+    <div class="grid grid-cols-2 gap-4 sm:gap-6 lg:gap-8">
+      <img src="<%= post.image%>" alt="Post Image" class="rounded-lg bg-gray-100 w-full h-auto">
     </div>
   </div>
 </div>
+
+
 
 <%- include('partials/footer') -%>
