--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,7 +23,7 @@
             <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Name (First & Last)</label>
             <div class="mt-2">
               <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                <input type="text" name="username" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="e.g. John Smith">
+                <input type="text" name="userName" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="e.g. John Smith">
               </div>
             </div>
           </div>
@@ -57,7 +57,7 @@
             <div class="mt-2">
               <select id="userType" name="userType" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                 <option value="contractor">Contractor</option>
-                <option valur="laborer">Laborer</option>
+                <option value="laborer">Laborer</option>
               </select>
             </div>
           </div>
