--- a/views/contractor-feed.ejs
+++ b/views/contractor-feed.ejs
@@ -2,18 +2,24 @@
 
 <div class="bg-white">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+    <!-- Section Title -->
     <h2 class="text-2xl font-bold tracking-tight text-gray-900">Contractor Feed</h2>
 
+    <!-- Grid of Posts -->
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
       <% for(var i=0; i<posts.length; i++) { %>
+        <!-- Individual Post Card -->
         <div class="group relative">
+          <!-- Post Image -->
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
             <a href="/post/<%= posts[i]._id%>">
               <img src="<%= posts[i].image%>" alt="Post Image" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
             </a>
           </div>
+          <!-- Post Details -->
           <div class="mt-4 flex justify-between">
             <div>
+              <!-- Post Description -->
               <h3 class="text-sm text-gray-700">
                 <a href="/post/<%= posts[i]._id%>">
                   <span aria-hidden="true" class="absolute inset-0"></span>
