--- a/views/contractor-profile.ejs
+++ b/views/contractor-profile.ejs
@@ -1,59 +1,74 @@
 <%- include('partials/header') -%>
 <div class="container">
   <div class="row mt-5 flex-column">
+    <!-- User Information -->
       <div>
           <div>
+            <!-- Display User Information -->
               <p class="text-2xl font-bold"><strong>User Name</strong>: <%= user.userName %></p>
               <p class="text-gray-500"><strong>Email</strong>: <%= user.email %></p>
           </div>
           <div class="marg-bot-1">
+            <!-- Display Total Jobs -->
             <p class="text-gray-700"><span class="font-bold">Total Jobs:</span> <%= posts.length %></p>
           </div> 
+          <!-- Form for Adding a Post -->
       <form action="/post/createContractorPost" enctype="multipart/form-data" method="POST">
         <div class="space-y-12">
           <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-gray-900">Add A Post</h2>
             <p class="mt-1 text-sm leading-6 text-gray-600">This information will be displayed publicly so be careful what you share.</p>
+            <!-- Form Fields for Post -->
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
               <div class="sm:col-span-3">
+                <!-- Title Input -->
                 <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Title</label>
                 <div class="mt-2">
                   <input type="text" id="title" name="title" placeholder="Give a title for the job posting" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
               <div class="col-span-full">
+                <!-- Description Textarea -->
                 <label for="caption" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
                 <div class="mt-2">
                   <textarea id="caption" name="caption" rows="3" placeholder="Describe the job, location, pay, length of time needed, etc." class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                 </div>
               </div>
             </div>
+            <!-- Image Upload Input -->
             <div class="mb-3">
               <label for="imgUpload" class="form-label">Image</label>
               <input type="file" class="form-control" id="imageUpload" name="file">
             </div>
             <!-- Hidden field for userType -->
             <input type="hidden" name="postType" value="contractor">
+            <!-- Submit Button -->
             <button type="submit" value="Upload" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
           </div>
         </div>
       </form>
     </div>
+    <!-- Display User's Posts -->
     <div>
       <div class="bg-white">
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
             <h2 class="text-2xl font-bold tracking-tight text-gray-900">Your Posts</h2>
-      
+
+            <!-- Grid of User's Posts -->
             <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                 <% for(var i=0; i<posts.length; i++) { %>
+                  <!-- Individual Post Card -->
                     <div class="group relative">
+                      <!-- Post Image -->
                         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <a href="/post/<%= posts[i]._id%>">
                                 <img src="<%= posts[i].image%>" alt="Post Image" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                             </a>
                         </div>
+                        <!-- Post Details -->
                         <div class="mt-4 flex justify-between">
                             <div>
+                              <!-- Post Description -->
                                 <h3 class="text-sm text-gray-700">
                                     <a href="/post/<%= posts[i]._id%>">
                                         <span aria-hidden="true" class="absolute inset-0"></span>
@@ -67,6 +82,7 @@
             </div>
         </div>
       </div>
+      <!-- Return to Feed Button -->
       <div class="row justify-content-center mb-3">
         <a class="w-1/4 flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" href="/contractor-feed">Return to Feed</a>
       </div>
