--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DayLaborLink</title>
+
+    <!-- Favicon -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="https://res.cloudinary.com/dgvzl6j7o/image/upload/f_auto,q_auto/v1/Logos/jfd2bgv9s74optv8wvtx"
     />
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+
+    <!-- Font Awesome CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <!-- Header Container -->
     <header class="header-container">
+      <!-- Navigation -->
       <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+         <!-- Logo -->
         <div class="flex lg:flex-1">
           <a href="/login" class="-m-1.5 p-1.5">
             <span class="sr-only">DayLaborLink</span>
             <img class="h-16 w-auto" src="https://res.cloudinary.com/dgvzl6j7o/image/upload/f_auto,q_auto/v1/Logos/jfd2bgv9s74optv8wvtx" alt="">
           </a>
         </div>
+
+        <!-- Mobile Menu Button -->
         <div class="flex lg:hidden">
           <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
             <span class="sr-only">Open main menu</span>
@@ -44,6 +60,8 @@
             </svg>
           </button>
         </div>
+
+        <!-- User Navigation -->
         <div class="lg:flex lg:flex-1 lg:justify-end">
           <p class="block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50 header-button">Welcome <%= user.userName %></p>
           <a href="/favorites" class="text-sm font-semibold leading-6 text-gray-900 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 header-button">Favorited Posts</a>
@@ -68,6 +86,7 @@
               </svg>
             </button>
           </div>
+          <!-- Mobile Menu Links -->
               <div class="py-6">
                 <a href="/login" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
                 <a href="/signup" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Sign-Up</a>
