--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,16 @@
 
 <main class="container">
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <!-- Company Logo and Title -->
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img class="mx-auto h-32 w-auto" src="https://res.cloudinary.com/dgvzl6j7o/image/upload/f_auto,q_auto/v1/Logos/jfd2bgv9s74optv8wvtx" alt="Your Company">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
+
+  <!-- Login Form -->
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
     <form class="space-y-6" action="/login" method="POST">
+      <!-- Email Input -->
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
         <div class="mt-2">
@@ -15,10 +19,12 @@
         </div>
       </div>
 
+      <!-- Password Input -->
       <div>
         <div class="flex items-center justify-between">
           <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
           <div class="text-sm">
+            <!-- Additional info or actions (if any) related to the password -->
           </div>
         </div>
         <div class="mt-2">
@@ -26,11 +32,13 @@
         </div>
       </div>
 
+      <!-- Sign In Button -->
       <div>
         <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
       </div>
     </form>
 
+    <!-- Sign-Up Link -->
     <p class="mt-10 text-center text-sm text-gray-500">
       Not a member?
       <a href="/signup" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Sign-Up now!</a>
