--- a/views/contractor-feed.ejs
+++ b/views/contractor-feed.ejs
@@ -10,6 +10,8 @@
       <% for(var i=0; i<posts.length; i++) { %>
         <!-- Individual Post Card -->
         <div class="group relative">
+          <!-- Title of post -->
+          <h3 class="font-bold tracking-tight text-gray-900"><%= posts[i].title%></h3>
           <!-- Post Image -->
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
             <a href="/post/<%= posts[i]._id%>">
