--- a/views/laborer-profile.ejs
+++ b/views/laborer-profile.ejs
@@ -78,6 +78,8 @@
             <!-- Display user's posts -->
             <% for(var i=0; i<posts.length; i++) { %>
               <div class="group relative">
+                <!-- Title of post -->
+                <h3 class="post-title-text font-bold tracking-tight text-gray-900"><%= posts[i].title%></h3>
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                   <a href="/post/<%= posts[i]._id%>">
                     <img src="<%= posts[i].image%>" alt="Post Image" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
