--- a/views/laborer-feed.ejs
+++ b/views/laborer-feed.ejs
@@ -16,7 +16,7 @@
         <!-- Container for each post with relative positioning -->
         <div class="group relative">
         <!-- Title of post -->
-        <h3 class="font-bold tracking-tight text-gray-900"><%= posts[i].title%></h3>
+        <h3 class="post-title-text font-bold tracking-tight text-gray-900"><%= posts[i].title%></h3>
           <!-- Aspect ratio for the post image with rounded background -->
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
             <!-- Link to the individual post -->
