--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -31,4 +31,7 @@
   </div>
 </div>
 
+<div id="map"></div>
+    <script type="module" src="./main.js"></script>
+
 <%- include('partials/footer') -%>
